syntax = "proto3";
package crud;

import "common.proto";

// Building

message CreateBuildingRequest { common.NewBuilding building = 1; }
message CreateBuildingResponse { common.Building building = 1; }

message GetBuildingRequest { int32 id = 1; }
message GetBuildingResponse { common.Building building = 1; }

message UpdateBuildingRequest { common.UpdateBuilding building = 1; }
message UpdateBuildingResponse { common.Building building = 1; }

message DeleteBuildingRequest { int32 id = 1; }
message DeleteBuildingResponse { bool success = 1; }

message ListBuildingsRequest {}
message ListBuildingsResponse { repeated common.Building buildings = 1; }

message ListBuildingsByFortressRequest { int32 fortress_id = 1; }
message ListBuildingsByFortressResponse { repeated common.Building buildings = 1; }

service BuildingService {
  rpc CreateBuilding(CreateBuildingRequest) returns (CreateBuildingResponse);
  rpc GetBuilding(GetBuildingRequest) returns (GetBuildingResponse);
  rpc UpdateBuilding(UpdateBuildingRequest) returns (UpdateBuildingResponse);
  rpc DeleteBuilding(DeleteBuildingRequest) returns (DeleteBuildingResponse);
  rpc ListBuildings(ListBuildingsRequest) returns (ListBuildingsResponse);
  rpc ListBuildingsByFortress(ListBuildingsByFortressRequest)
      returns (ListBuildingsByFortressResponse);
}

// Fortress

message CreateFortressRequest { common.NewFortress fortress = 1; }
message CreateFortressResponse { common.Fortress fortress = 1; }

message GetFortressRequest { int32 id = 1; }
message GetFortressResponse { common.Fortress fortress = 1; }

message UpdateFortressRequest { common.UpdateFortress fortress = 1; }
message UpdateFortressResponse { common.Fortress fortress = 1; }

message DeleteFortressRequest { int32 id = 1; }
message DeleteFortressResponse { bool success = 1; }

message ListFortressesRequest {}
message ListFortressesResponse { repeated common.Fortress fortresses = 1; }

message CollectFortressRequest { int32 id = 1; }
message CollectFortressResponse { common.Fortress fortress = 1; }

service FortressService {
  rpc CreateFortress(CreateFortressRequest) returns (CreateFortressResponse);
  rpc GetFortress(GetFortressRequest) returns (GetFortressResponse);
  rpc UpdateFortress(UpdateFortressRequest) returns (UpdateFortressResponse);
  rpc DeleteFortress(DeleteFortressRequest) returns (DeleteFortressResponse);
  rpc ListFortresses(ListFortressesRequest) returns (ListFortressesResponse);

  rpc CollectFortressGold(CollectFortressRequest)
      returns (CollectFortressResponse);
  rpc CollectFortressFood(CollectFortressRequest)
      returns (CollectFortressResponse);
  rpc CollectFortressWood(CollectFortressRequest)
      returns (CollectFortressResponse);
  rpc CollectFortressEnergy(CollectFortressRequest)
      returns (CollectFortressResponse);
}
